tests/ui/associated-type-bounds/ambiguous-associated-type2.stderr
error[E0391]: cycle detected when computing the super traits of `Baz` with associated type name `Item`
  --> $DIR/ambiguous-associated-type2.rs:7:1
   |
LL | trait Baz: Foo + Bar<Self::Item> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: ...which immediately requires computing the super traits of `Baz` with associated type name `Item` again
note: cycle used when computing the super predicates of `Baz`
  --> $DIR/ambiguous-associated-type2.rs:7:1
   |
LL | trait Baz: Foo + Bar<Self::Item> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
